--- a/src/features/infoPanel/infoPanel.css
+++ b/src/features/infoPanel/infoPanel.css
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
     background: var(--main);
-    margin-left: 1.5rem;
+    margin-right: 0.3rem
 }
 
 
