--- a/src/features/mainContent/mainContent.css
+++ b/src/features/mainContent/mainContent.css
@@ -32,9 +32,8 @@
     display: flex;
     align-items: center;
     width: 100%;
-    max-width: 72.7rem;
     height: 2.9rem;
-    background-color: #FFFFFF;
+    background-color: var(--back-white);
     border-radius: 0.5rem;
     padding-left: 1rem;
     gap: 0.8rem;
