--- a/src/features/sideBar/SideBarMenu.css
+++ b/src/features/sideBar/SideBarMenu.css
@@ -1,4 +1,3 @@
-
 .sidebar__menu {
     flex: 1;
     overflow-y: auto;
@@ -30,4 +29,33 @@
     height: 1.5rem;
     border-radius: 0.2rem;
     flex-shrink: 0;
+}
+
+.sidebar__item {
+    position: relative;
+    display: flex;
+    align-items: center;
+    gap: 1.8rem;
+    padding-left: .1rem;
+    font-size: 1rem;
+    color: #fff;
+    cursor: pointer;
+}
+
+
+.sidebar__marker {
+    position: absolute;
+    left: -3.3rem;
+    width: .7rem;
+    height: 4.4rempx;
+    background: white;
+    border-radius: 0 .5rem .5rem 0;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
+
+.sidebar__item:hover .sidebar__marker,
+.sidebar__item.active .sidebar__marker {
+    opacity: 1;
 }
