--- a/src/features/sideBar/sideBar.css
+++ b/src/features/sideBar/sideBar.css
@@ -3,7 +3,6 @@
     height: 100vh;
     display: flex;
     flex-direction: column;
-    margin-right: 2.2rem;
     flex-shrink: 0;
 }
 
@@ -58,3 +57,5 @@
     font-size: 1.2rem;
     line-height: 1;
 }
+
+
